// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionsRow renders 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Due May 31, 2037 at 11:59 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              20 pts
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;

exports[`DiscussionsRow renders published 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Due May 31, 2037 at 11:59 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              20 pts
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;

exports[`DiscussionsRow renders unpublished 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Due May 31, 2037 at 11:59 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              20 pts
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={false}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;

exports[`DiscussionsRow renders with no assignment 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Last post Dec 10, 2016 at 9:03 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;

exports[`DiscussionsRow renders with no unread count 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Multiple Due Dates",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              12 pts
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "0 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View />
</View>
`;

exports[`DiscussionsRow renders with points possible 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Due May 31, 2037 at 11:59 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              12 pts
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;

exports[`DiscussionsRow renders without points possible 1`] = `
<View
  accessible={false}
>
  <View
    accessible={false}
  >
    <Row
      accessibilityLabel="Dear Ivy Iversen, your last name cannot start with your first name"
      accessible={false}
      border="bottom"
      disclosureIndicator={false}
      height="auto"
      onPress={[Function]}
      renderImage={[Function]}
      selected={false}
      testID="discussion-row-0"
      title="Dear Ivy Iversen, your last name cannot start with your first name"
      titleProps={
        Object {
          "ellipsizeMode": "tail",
          "numberOfLines": 2,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <DotSeparated
            separated={
              Array [
                "Due May 31, 2037 at 11:59 PM",
              ]
            }
            style={
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              }
            }
          />
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingTop": 2,
              }
            }
          >
            <DotSeparated
              separated={
                Array [
                  "2 Replies",
                  "1 Unread",
                ]
              }
              style={
                Object {
                  "fontSize": 14,
                }
              }
            />
          </View>
        </View>
        <TouchableHighlight
          accessibilityLabel="Change Dear Ivy Iversen, your last name cannot start with your first name to different grouping"
          accessibilityTraits="button"
          accessible={true}
          activeOpacity={0.85}
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "flexDirection": "column",
              "height": 43,
              "justifyContent": "center",
              "marginRight": -8,
              "marginTop": -15,
              "width": 43,
            }
          }
          testID="discussion.kabob-1"
          underlayColor="#ffffff00"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/kabob.png",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 18,
                "tintColor": "#73818C",
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
                "width": 18,
              }
            }
          />
        </TouchableHighlight>
      </View>
    </Row>
  </View>
  <AccessLine
    disableAppSpecificChecks={false}
    visible={true}
  />
  <View
    style={
      Object {
        "backgroundColor": "#008EE4",
        "borderRadius": 2.5,
        "height": 5,
        "left": 8,
        "position": "absolute",
        "top": 6,
        "width": 5,
      }
    }
  />
</View>
`;
